--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,15 @@
                     $("#message").html("Failed to create new object, with error code: " + JSON.stringify(err));
                 })
         }
+
+        function fetch() {
+            var TestClass = ncmb.DataStore("FetchTest");
+            TestClass.fetch().then(function(results) {
+                var data = results.get("text");
+                var update = results.get("updateDate");
+                $("#message").html(data + ":" + update);
+            })
+        }
     </script>
 </head>
 
